@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -43,28 +43,29 @@ import org.springframework.core.convert.converter.ConverterFactory;
 import org.springframework.core.convert.converter.GenericConverter;
 import org.springframework.core.io.DescriptiveResource;
 import org.springframework.core.io.Resource;
+import org.springframework.lang.Nullable;
 import org.springframework.tests.Assume;
 import org.springframework.tests.TestGroup;
 import org.springframework.util.StopWatch;
 import org.springframework.util.StringUtils;
 
-import static java.util.Comparator.*;
-import static java.util.stream.Collectors.*;
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
+import static java.util.Comparator.naturalOrder;
+import static java.util.stream.Collectors.toList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 
 /**
- * Unit tests for the {@link GenericConversionService}.
+ * Unit tests for {@link GenericConversionService}.
  *
- * <p>For tests involving the {@link DefaultConversionService}, see
- * {@link DefaultConversionServiceTests}.
+ * <p>In this package for access to package-local converter implementations.
  *
  * @author Keith Donald
  * @author Juergen Hoeller
  * @author Phillip Webb
  * @author David Haraburda
  * @author Sam Brannen
- * @see DefaultConversionServiceTests
  */
 public class GenericConversionServiceTests {
 
@@ -73,111 +74,122 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void canConvert() {
-		assertFalse(conversionService.canConvert(String.class, Integer.class));
+		assertThat(conversionService.canConvert(String.class, Integer.class)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(String.class, Integer.class));
+		assertThat(conversionService.canConvert(String.class, Integer.class)).isTrue();
 	}
 
 	@Test
 	public void canConvertAssignable() {
-		assertTrue(conversionService.canConvert(String.class, String.class));
-		assertTrue(conversionService.canConvert(Integer.class, Number.class));
-		assertTrue(conversionService.canConvert(boolean.class, boolean.class));
-		assertTrue(conversionService.canConvert(boolean.class, Boolean.class));
+		assertThat(conversionService.canConvert(String.class, String.class)).isTrue();
+		assertThat(conversionService.canConvert(Integer.class, Number.class)).isTrue();
+		assertThat(conversionService.canConvert(boolean.class, boolean.class)).isTrue();
+		assertThat(conversionService.canConvert(boolean.class, Boolean.class)).isTrue();
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void canConvertFromClassSourceTypeToNullTargetType() {
-		conversionService.canConvert(String.class, null);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(String.class, null));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void canConvertFromTypeDescriptorSourceTypeToNullTargetType() {
-		conversionService.canConvert(TypeDescriptor.valueOf(String.class), null);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(TypeDescriptor.valueOf(String.class), null));
 	}
 
 	@Test
 	public void canConvertNullSourceType() {
-		assertTrue(conversionService.canConvert(null, Integer.class));
-		assertTrue(conversionService.canConvert(null, TypeDescriptor.valueOf(Integer.class)));
+		assertThat(conversionService.canConvert(null, Integer.class)).isTrue();
+		assertThat(conversionService.canConvert(null, TypeDescriptor.valueOf(Integer.class))).isTrue();
 	}
 
 	@Test
 	public void convert() {
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertEquals(new Integer(3), conversionService.convert("3", Integer.class));
+		assertThat(conversionService.convert("3", Integer.class)).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	@Test
 	public void convertNullSource() {
-		assertEquals(null, conversionService.convert(null, Integer.class));
+		assertThat(conversionService.convert(null, Integer.class)).isEqualTo(null);
 	}
 
-	@Test(expected = ConversionFailedException.class)
+	@Test
 	public void convertNullSourcePrimitiveTarget() {
-		conversionService.convert(null, int.class);
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert(null, int.class));
 	}
 
-	@Test(expected = ConversionFailedException.class)
+	@Test
 	public void convertNullSourcePrimitiveTargetTypeDescriptor() {
-		conversionService.convert(null, TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(int.class));
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert(null, TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(int.class)));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void convertNotNullSourceNullSourceTypeDescriptor() {
-		conversionService.convert("3", null, TypeDescriptor.valueOf(int.class));
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", null, TypeDescriptor.valueOf(int.class)));
 	}
 
 	@Test
 	public void convertAssignableSource() {
-		assertEquals(Boolean.FALSE, conversionService.convert(false, boolean.class));
-		assertEquals(Boolean.FALSE, conversionService.convert(false, Boolean.class));
+		assertThat(conversionService.convert(false, boolean.class)).isEqualTo(Boolean.FALSE);
+		assertThat(conversionService.convert(false, Boolean.class)).isEqualTo(Boolean.FALSE);
 	}
 
-	@Test(expected = ConverterNotFoundException.class)
+	@Test
 	public void converterNotFound() {
-		conversionService.convert("3", Integer.class);
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("3", Integer.class));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void addConverterNoSourceTargetClassInfoAvailable() {
-		conversionService.addConverter(new UntypedConverter());
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.addConverter(new UntypedConverter()));
 	}
 
 	@Test
 	public void sourceTypeIsVoid() {
-		assertFalse(conversionService.canConvert(void.class, String.class));
+		assertThat(conversionService.canConvert(void.class, String.class)).isFalse();
 	}
 
 	@Test
 	public void targetTypeIsVoid() {
-		assertFalse(conversionService.canConvert(String.class, void.class));
+		assertThat(conversionService.canConvert(String.class, void.class)).isFalse();
 	}
 
 	@Test
 	public void convertNull() {
-		assertNull(conversionService.convert(null, Integer.class));
+		assertThat(conversionService.convert(null, Integer.class)).isNull();
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void convertToNullTargetClass() {
-		conversionService.convert("3", (Class<?>) null);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", (Class<?>) null));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void convertToNullTargetTypeDescriptor() {
-		conversionService.convert("3", TypeDescriptor.valueOf(String.class), null);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", TypeDescriptor.valueOf(String.class), null));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void convertWrongSourceTypeDescriptor() {
-		conversionService.convert("3", TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Long.class));
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.convert("3", TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Long.class)));
 	}
 
-	@Test(expected = ConversionFailedException.class)
+	@Test
 	public void convertWrongTypeArgument() {
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		conversionService.convert("BOGUS", Integer.class);
+		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
+				conversionService.convert("BOGUS", Integer.class));
 	}
 
 	@Test
@@ -189,68 +201,70 @@ public class GenericConversionServiceTests {
 			}
 		});
 		Integer result = conversionService.convert("3", Integer.class);
-		assertEquals(new Integer(3), result);
+		assertThat((int) result).isEqualTo((int) Integer.valueOf(3));
 	}
 
 	// SPR-8718
-	@Test(expected = ConverterNotFoundException.class)
+	@Test
 	public void convertSuperTarget() {
 		conversionService.addConverter(new ColorConverter());
-		conversionService.convert("#000000", SystemColor.class);
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("#000000", SystemColor.class));
 	}
 
 	@Test
 	public void convertObjectToPrimitive() {
-		assertFalse(conversionService.canConvert(String.class, boolean.class));
+		assertThat(conversionService.canConvert(String.class, boolean.class)).isFalse();
 		conversionService.addConverter(new StringToBooleanConverter());
-		assertTrue(conversionService.canConvert(String.class, boolean.class));
+		assertThat(conversionService.canConvert(String.class, boolean.class)).isTrue();
 		Boolean b = conversionService.convert("true", boolean.class);
-		assertTrue(b);
-		assertTrue(conversionService.canConvert(TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class)));
+		assertThat(b).isTrue();
+		assertThat(conversionService.canConvert(TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class))).isTrue();
 		b = (Boolean) conversionService.convert("true", TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class));
-		assertTrue(b);
+		assertThat(b).isTrue();
 	}
 
 	@Test
 	public void convertObjectToPrimitiveViaConverterFactory() {
-		assertFalse(conversionService.canConvert(String.class, int.class));
+		assertThat(conversionService.canConvert(String.class, int.class)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(String.class, int.class));
+		assertThat(conversionService.canConvert(String.class, int.class)).isTrue();
 		Integer three = conversionService.convert("3", int.class);
-		assertEquals(3, three.intValue());
+		assertThat(three.intValue()).isEqualTo(3);
 	}
 
-	@Test(expected = ConverterNotFoundException.class)
+	@Test
 	public void genericConverterDelegatingBackToConversionServiceConverterNotFound() {
 		conversionService.addConverter(new ObjectToArrayConverter(conversionService));
-		assertFalse(conversionService.canConvert(String.class, Integer[].class));
-		conversionService.convert("3,4,5", Integer[].class);
+		assertThat(conversionService.canConvert(String.class, Integer[].class)).isFalse();
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("3,4,5", Integer[].class));
 	}
 
 	@Test
 	public void testListToIterableConversion() {
-		List<Object> raw = new ArrayList<Object>();
+		List<Object> raw = new ArrayList<>();
 		raw.add("one");
 		raw.add("two");
 		Object converted = conversionService.convert(raw, Iterable.class);
-		assertSame(raw, converted);
+		assertThat(converted).isSameAs(raw);
 	}
 
 	@Test
 	public void testListToObjectConversion() {
-		List<Object> raw = new ArrayList<Object>();
+		List<Object> raw = new ArrayList<>();
 		raw.add("one");
 		raw.add("two");
 		Object converted = conversionService.convert(raw, Object.class);
-		assertSame(raw, converted);
+		assertThat(converted).isSameAs(raw);
 	}
 
 	@Test
 	public void testMapToObjectConversion() {
-		Map<Object, Object> raw = new HashMap<Object, Object>();
+		Map<Object, Object> raw = new HashMap<>();
 		raw.put("key", "value");
 		Object converted = conversionService.convert(raw, Object.class);
-		assertSame(raw, converted);
+		assertThat(converted).isSameAs(raw);
 	}
 
 	@Test
@@ -258,7 +272,7 @@ public class GenericConversionServiceTests {
 		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
 		conversionService.addConverter(new ObjectToStringConverter());
 		Object converted = conversionService.convert(new MyInterfaceImplementer(), String.class);
-		assertEquals("RESULT", converted);
+		assertThat(converted).isEqualTo("RESULT");
 	}
 
 	@Test
@@ -266,7 +280,7 @@ public class GenericConversionServiceTests {
 		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
 		conversionService.addConverter(new ArrayToArrayConverter(conversionService));
 		String[] converted = conversionService.convert(new MyInterface[] {new MyInterfaceImplementer()}, String[].class);
-		assertEquals("RESULT", converted[0]);
+		assertThat(converted[0]).isEqualTo("RESULT");
 	}
 
 	@Test
@@ -274,7 +288,7 @@ public class GenericConversionServiceTests {
 		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
 		conversionService.addConverter(new ArrayToArrayConverter(conversionService));
 		String[] converted = conversionService.convert(new MyInterfaceImplementer[] {new MyInterfaceImplementer()}, String[].class);
-		assertEquals("RESULT", converted[0]);
+		assertThat(converted[0]).isEqualTo("RESULT");
 	}
 
 	@Test
@@ -282,50 +296,50 @@ public class GenericConversionServiceTests {
 		conversionService.addConverter(new MyStringArrayToResourceArrayConverter());
 		Resource[] converted = conversionService.convert(new String[] { "x1", "z3" }, Resource[].class);
 		List<String> descriptions = Arrays.stream(converted).map(Resource::getDescription).sorted(naturalOrder()).collect(toList());
-		assertEquals(Arrays.asList("1", "3"), descriptions);
+		assertThat(descriptions).isEqualTo(Arrays.asList("1", "3"));
 	}
 
 	@Test
 	public void testStringArrayToIntegerArray() {
 		conversionService.addConverter(new MyStringArrayToIntegerArrayConverter());
 		Integer[] converted = conversionService.convert(new String[] {"x1", "z3"}, Integer[].class);
-		assertArrayEquals(new Integer[] { 1, 3 }, converted);
+		assertThat(converted).isEqualTo(new Integer[] { 1, 3 });
 	}
 
 	@Test
 	public void testStringToIntegerArray() {
 		conversionService.addConverter(new MyStringToIntegerArrayConverter());
 		Integer[] converted = conversionService.convert("x1,z3", Integer[].class);
-		assertArrayEquals(new Integer[] { 1, 3 }, converted);
+		assertThat(converted).isEqualTo(new Integer[] { 1, 3 });
 	}
 
 	@Test
 	public void testWildcardMap() throws Exception {
-		Map<String, String> input = new LinkedHashMap<String, String>();
+		Map<String, String> input = new LinkedHashMap<>();
 		input.put("key", "value");
 		Object converted = conversionService.convert(input, TypeDescriptor.forObject(input), new TypeDescriptor(getClass().getField("wildcardMap")));
-		assertEquals(input, converted);
+		assertThat(converted).isEqualTo(input);
 	}
 
 	@Test
 	public void testStringToString() {
 		String value = "myValue";
 		String result = conversionService.convert(value, String.class);
-		assertSame(value, result);
+		assertThat(result).isSameAs(value);
 	}
 
 	@Test
 	public void testStringToObject() {
 		String value = "myValue";
 		Object result = conversionService.convert(value, Object.class);
-		assertSame(value, result);
+		assertThat(result).isSameAs(value);
 	}
 
 	@Test
 	public void testIgnoreCopyConstructor() {
 		WithCopyConstructor value = new WithCopyConstructor();
 		Object result = conversionService.convert(value, WithCopyConstructor.class);
-		assertSame(value, result);
+		assertThat(result).isSameAs(value);
 	}
 
 	@Test
@@ -333,7 +347,7 @@ public class GenericConversionServiceTests {
 		Assume.group(TestGroup.PERFORMANCE);
 		StopWatch watch = new StopWatch("list<string> -> list<integer> conversionPerformance");
 		watch.start("convert 4,000,000 with conversion service");
-		List<String> source = new LinkedList<String>();
+		List<String> source = new LinkedList<>();
 		source.add("1");
 		source.add("2");
 		source.add("3");
@@ -344,7 +358,7 @@ public class GenericConversionServiceTests {
 		watch.stop();
 		watch.start("convert 4,000,000 manually");
 		for (int i = 0; i < 4000000; i++) {
-			List<Integer> target = new ArrayList<Integer>(source.size());
+			List<Integer> target = new ArrayList<>(source.size());
 			for (String element : source) {
 				target.add(Integer.valueOf(element));
 			}
@@ -358,7 +372,7 @@ public class GenericConversionServiceTests {
 		Assume.group(TestGroup.PERFORMANCE);
 		StopWatch watch = new StopWatch("map<string, string> -> map<string, integer> conversionPerformance");
 		watch.start("convert 4,000,000 with conversion service");
-		Map<String, String> source = new HashMap<String, String>();
+		Map<String, String> source = new HashMap<>();
 		source.put("1", "1");
 		source.put("2", "2");
 		source.put("3", "3");
@@ -369,10 +383,8 @@ public class GenericConversionServiceTests {
 		watch.stop();
 		watch.start("convert 4,000,000 manually");
 		for (int i = 0; i < 4000000; i++) {
-			Map<String, Integer> target = new HashMap<String, Integer>(source.size());
-			for (Map.Entry<String, String> entry : source.entrySet()) {
-				target.put(entry.getKey(), Integer.valueOf(entry.getValue()));
-			}
+			Map<String, Integer> target = new HashMap<>(source.size());
+			source.forEach((k, v) -> target.put(k, Integer.valueOf(v)));
 		}
 		watch.stop();
 		// System.out.println(watch.prettyPrint());
@@ -382,45 +394,45 @@ public class GenericConversionServiceTests {
 	public void emptyListToArray() {
 		conversionService.addConverter(new CollectionToArrayConverter(conversionService));
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		List<String> list = new ArrayList<String>();
+		List<String> list = new ArrayList<>();
 		TypeDescriptor sourceType = TypeDescriptor.forObject(list);
 		TypeDescriptor targetType = TypeDescriptor.valueOf(String[].class);
-		assertTrue(conversionService.canConvert(sourceType, targetType));
-		assertEquals(0, ((String[]) conversionService.convert(list, sourceType, targetType)).length);
+		assertThat(conversionService.canConvert(sourceType, targetType)).isTrue();
+		assertThat(((String[]) conversionService.convert(list, sourceType, targetType)).length).isEqualTo(0);
 	}
 
 	@Test
 	public void emptyListToObject() {
 		conversionService.addConverter(new CollectionToObjectConverter(conversionService));
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		List<String> list = new ArrayList<String>();
+		List<String> list = new ArrayList<>();
 		TypeDescriptor sourceType = TypeDescriptor.forObject(list);
 		TypeDescriptor targetType = TypeDescriptor.valueOf(Integer.class);
-		assertTrue(conversionService.canConvert(sourceType, targetType));
-		assertNull(conversionService.convert(list, sourceType, targetType));
+		assertThat(conversionService.canConvert(sourceType, targetType)).isTrue();
+		assertThat(conversionService.convert(list, sourceType, targetType)).isNull();
 	}
 
 	@Test
 	public void stringToArrayCanConvert() {
 		conversionService.addConverter(new StringToArrayConverter(conversionService));
-		assertFalse(conversionService.canConvert(String.class, Integer[].class));
+		assertThat(conversionService.canConvert(String.class, Integer[].class)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(String.class, Integer[].class));
+		assertThat(conversionService.canConvert(String.class, Integer[].class)).isTrue();
 	}
 
 	@Test
 	public void stringToCollectionCanConvert() throws Exception {
 		conversionService.addConverter(new StringToCollectionConverter(conversionService));
-		assertTrue(conversionService.canConvert(String.class, Collection.class));
+		assertThat(conversionService.canConvert(String.class, Collection.class)).isTrue();
 		TypeDescriptor targetType = new TypeDescriptor(getClass().getField("integerCollection"));
-		assertFalse(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType));
+		assertThat(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType)).isFalse();
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertTrue(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType));
+		assertThat(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType)).isTrue();
 	}
 
 	@Test
 	public void testConvertiblePairsInSet() {
-		Set<GenericConverter.ConvertiblePair> set = new HashSet<GenericConverter.ConvertiblePair>();
+		Set<GenericConverter.ConvertiblePair> set = new HashSet<>();
 		set.add(new GenericConverter.ConvertiblePair(Number.class, String.class));
 		assert set.contains(new GenericConverter.ConvertiblePair(Number.class, String.class));
 	}
@@ -429,34 +441,36 @@ public class GenericConversionServiceTests {
 	public void testConvertiblePairEqualsAndHash() {
 		GenericConverter.ConvertiblePair pair = new GenericConverter.ConvertiblePair(Number.class, String.class);
 		GenericConverter.ConvertiblePair pairEqual = new GenericConverter.ConvertiblePair(Number.class, String.class);
-		assertEquals(pair, pairEqual);
-		assertEquals(pair.hashCode(), pairEqual.hashCode());
+		assertThat(pairEqual).isEqualTo(pair);
+		assertThat(pairEqual.hashCode()).isEqualTo(pair.hashCode());
 	}
 
 	@Test
 	public void testConvertiblePairDifferentEqualsAndHash() {
 		GenericConverter.ConvertiblePair pair = new GenericConverter.ConvertiblePair(Number.class, String.class);
 		GenericConverter.ConvertiblePair pairOpposite = new GenericConverter.ConvertiblePair(String.class, Number.class);
-		assertFalse(pair.equals(pairOpposite));
-		assertFalse(pair.hashCode() == pairOpposite.hashCode());
+		assertThat(pair.equals(pairOpposite)).isFalse();
+		assertThat(pair.hashCode() == pairOpposite.hashCode()).isFalse();
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void canConvertIllegalArgumentNullTargetTypeFromClass() {
-		conversionService.canConvert(String.class, null);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(String.class, null));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void canConvertIllegalArgumentNullTargetTypeFromTypeDescriptor() {
-		conversionService.canConvert(TypeDescriptor.valueOf(String.class), null);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				conversionService.canConvert(TypeDescriptor.valueOf(String.class), null));
 	}
 
 	@Test
 	public void removeConvertible() {
 		conversionService.addConverter(new ColorConverter());
-		assertTrue(conversionService.canConvert(String.class, Color.class));
+		assertThat(conversionService.canConvert(String.class, Color.class)).isTrue();
 		conversionService.removeConvertible(String.class, Color.class);
-		assertFalse(conversionService.canConvert(String.class, Color.class));
+		assertThat(conversionService.canConvert(String.class, Color.class)).isFalse();
 	}
 
 	@Test
@@ -464,8 +478,8 @@ public class GenericConversionServiceTests {
 		MyConditionalConverter converter = new MyConditionalConverter();
 		conversionService.addConverter(new ColorConverter());
 		conversionService.addConverter(converter);
-		assertEquals(Color.BLACK, conversionService.convert("#000000", Color.class));
-		assertTrue(converter.getMatchAttempts() > 0);
+		assertThat(conversionService.convert("#000000", Color.class)).isEqualTo(Color.BLACK);
+		assertThat(converter.getMatchAttempts() > 0).isTrue();
 	}
 
 	@Test
@@ -473,30 +487,41 @@ public class GenericConversionServiceTests {
 		MyConditionalConverterFactory converter = new MyConditionalConverterFactory();
 		conversionService.addConverter(new ColorConverter());
 		conversionService.addConverterFactory(converter);
-		assertEquals(Color.BLACK, conversionService.convert("#000000", Color.class));
-		assertTrue(converter.getMatchAttempts() > 0);
-		assertTrue(converter.getNestedMatchAttempts() > 0);
+		assertThat(conversionService.convert("#000000", Color.class)).isEqualTo(Color.BLACK);
+		assertThat(converter.getMatchAttempts() > 0).isTrue();
+		assertThat(converter.getNestedMatchAttempts() > 0).isTrue();
+	}
+
+	@Test
+	public void conditionalConverterCachingForDifferentAnnotationAttributes() throws Exception {
+		conversionService.addConverter(new ColorConverter());
+		conversionService.addConverter(new MyConditionalColorConverter());
+
+		assertThat(conversionService.convert("000000xxxx",
+				new TypeDescriptor(getClass().getField("activeColor")))).isEqualTo(Color.BLACK);
+		assertThat(conversionService.convert(" #000000 ",
+				new TypeDescriptor(getClass().getField("inactiveColor")))).isEqualTo(Color.BLACK);
+		assertThat(conversionService.convert("000000yyyy",
+				new TypeDescriptor(getClass().getField("activeColor")))).isEqualTo(Color.BLACK);
+		assertThat(conversionService.convert("  #000000  ",
+				new TypeDescriptor(getClass().getField("inactiveColor")))).isEqualTo(Color.BLACK);
 	}
 
 	@Test
 	public void shouldNotSupportNullConvertibleTypesFromNonConditionalGenericConverter() {
 		GenericConverter converter = new NonConditionalGenericConverter();
-		try {
-			conversionService.addConverter(converter);
-			fail("Did not throw IllegalStateException");
-		}
-		catch (IllegalStateException ex) {
-			assertEquals("Only conditional converters may return null convertible types", ex.getMessage());
-		}
+		assertThatIllegalStateException().isThrownBy(() ->
+				conversionService.addConverter(converter))
+			.withMessage("Only conditional converters may return null convertible types");
 	}
 
 	@Test
 	public void conditionalConversionForAllTypes() {
 		MyConditionalGenericConverter converter = new MyConditionalGenericConverter();
 		conversionService.addConverter(converter);
-		assertEquals((Integer) 3, conversionService.convert(3, Integer.class));
-		assertThat(converter.getSourceTypes().size(), greaterThan(2));
-		assertTrue(converter.getSourceTypes().stream().allMatch(td -> Integer.class.equals(td.getType())));
+		assertThat(conversionService.convert(3, Integer.class)).isEqualTo(3);
+		assertThat(converter.getSourceTypes().size()).isGreaterThan(2);
+		assertThat(converter.getSourceTypes().stream().allMatch(td -> Integer.class.equals(td.getType()))).isTrue();
 	}
 
 	@Test
@@ -504,19 +529,19 @@ public class GenericConversionServiceTests {
 		// SPR-9566
 		byte[] byteArray = new byte[] { 1, 2, 3 };
 		byte[] converted = conversionService.convert(byteArray, byte[].class);
-		assertSame(byteArray, converted);
+		assertThat(converted).isSameAs(byteArray);
 	}
 
 	@Test
 	public void testEnumToStringConversion() {
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
-		assertEquals("A", conversionService.convert(MyEnum.A, String.class));
+		assertThat(conversionService.convert(MyEnum.A, String.class)).isEqualTo("A");
 	}
 
 	@Test
 	public void testSubclassOfEnumToString() throws Exception {
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
-		assertEquals("FIRST", conversionService.convert(EnumWithSubclass.FIRST, String.class));
+		assertThat(conversionService.convert(EnumWithSubclass.FIRST, String.class)).isEqualTo("FIRST");
 	}
 
 	@Test
@@ -524,21 +549,21 @@ public class GenericConversionServiceTests {
 		// SPR-9692
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
 		conversionService.addConverter(new MyEnumInterfaceToStringConverter<MyEnum>());
-		assertEquals("1", conversionService.convert(MyEnum.A, String.class));
+		assertThat(conversionService.convert(MyEnum.A, String.class)).isEqualTo("1");
 	}
 
 	@Test
 	public void testStringToEnumWithInterfaceConversion() {
 		conversionService.addConverterFactory(new StringToEnumConverterFactory());
 		conversionService.addConverterFactory(new StringToMyEnumInterfaceConverterFactory());
-		assertEquals(MyEnum.A, conversionService.convert("1", MyEnum.class));
+		assertThat(conversionService.convert("1", MyEnum.class)).isEqualTo(MyEnum.A);
 	}
 
 	@Test
 	public void testStringToEnumWithBaseInterfaceConversion() {
 		conversionService.addConverterFactory(new StringToEnumConverterFactory());
 		conversionService.addConverterFactory(new StringToMyEnumBaseInterfaceConverterFactory());
-		assertEquals(MyEnum.A, conversionService.convert("base1", MyEnum.class));
+		assertThat(conversionService.convert("base1", MyEnum.class)).isEqualTo(MyEnum.A);
 	}
 
 	@Test
@@ -556,87 +581,97 @@ public class GenericConversionServiceTests {
 		conversionService.addConverter(new MyStringToStringCollectionConverter());
 		conversionService.addConverter(new MyStringToIntegerCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton(4),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton(4));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
 	}
 
 	@Test
 	public void adaptedCollectionTypesFromSameSourceType() throws Exception {
 		conversionService.addConverter(new MyStringToStringCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
 
-		try {
-			conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")));
-			fail("Should have thrown ConverterNotFoundException");
-		}
-		catch (ConverterNotFoundException ex) {
-			// expected
-		}
+		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
+				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
 	}
 
 	@Test
 	public void genericCollectionAsSource() throws Exception {
 		conversionService.addConverter(new MyStringToGenericCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
 
 		// The following is unpleasant but a consequence of the generic collection converter above...
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")))).isEqualTo(Collections.singleton("testX"));
 	}
 
 	@Test
 	public void rawCollectionAsSource() throws Exception {
 		conversionService.addConverter(new MyStringToRawCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection")))).isEqualTo(Collections.singleton("testX"));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection")))).isEqualTo(Collections.singleton("testX"));
 
 		// The following is unpleasant but a consequence of the raw collection converter above...
-		assertEquals(Collections.singleton("testX"),
-				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
+		assertThat(conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")))).isEqualTo(Collections.singleton("testX"));
 	}
 
 
+	@ExampleAnnotation(active = true)
+	public String annotatedString;
+
+	@ExampleAnnotation(active = true)
+	public Color activeColor;
+
+	@ExampleAnnotation(active = false)
+	public Color inactiveColor;
+
+	public List<Integer> list;
+
+	public Map<String, Integer> map;
+
+	public Map<String, ?> wildcardMap;
+
+	@SuppressWarnings("rawtypes")
+	public Collection rawCollection;
+
+	public Collection<?> genericCollection;
+
+	public Collection<String> stringCollection;
+
+	public Collection<Integer> integerCollection;
+
+
 	@Retention(RetentionPolicy.RUNTIME)
-	private static @interface ExampleAnnotation {}
+	private @interface ExampleAnnotation {
 
-	private static interface MyBaseInterface {}
+		boolean active();
+	}
 
-	private static interface MyInterface extends MyBaseInterface {}
 
-	private static class MyInterfaceImplementer implements MyInterface {}
+	private interface MyBaseInterface {
+	}
+
+
+	private interface MyInterface extends MyBaseInterface {
+	}
+
+
+	private static class MyInterfaceImplementer implements MyInterface {
+	}
+
 
 	private static class MyBaseInterfaceToStringConverter implements Converter<MyBaseInterface, String> {
 
@@ -646,6 +681,7 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class MyStringArrayToResourceArrayConverter implements Converter<String[], Resource[]> {
 
 		@Override
@@ -654,6 +690,7 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class MyStringArrayToIntegerArrayConverter implements Converter<String[], Integer[]> {
 
 		@Override
@@ -661,6 +698,7 @@ public class GenericConversionServiceTests {
 			return Arrays.stream(source).map(s -> s.substring(1)).map(Integer::valueOf).toArray(Integer[]::new);
 		}
 	}
+
 
 	private static class MyStringToIntegerArrayConverter implements Converter<String, Integer[]>	{
 
@@ -671,6 +709,7 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class WithCopyConstructor {
 
 		WithCopyConstructor() {}
@@ -678,6 +717,7 @@ public class GenericConversionServiceTests {
 		@SuppressWarnings("unused")
 		WithCopyConstructor(WithCopyConstructor value) {}
 	}
+
 
 	private static class MyConditionalConverter implements Converter<String, Color>, ConditionalConverter {
 
@@ -699,6 +739,7 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class NonConditionalGenericConverter implements GenericConverter {
 
 		@Override
@@ -707,14 +748,16 @@ public class GenericConversionServiceTests {
 		}
 
 		@Override
-		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+		@Nullable
+		public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
 			return null;
 		}
 	}
 
+
 	private static class MyConditionalGenericConverter implements GenericConverter, ConditionalConverter {
 
-		private final List<TypeDescriptor> sourceTypes = new ArrayList<TypeDescriptor>();
+		private final List<TypeDescriptor> sourceTypes = new ArrayList<>();
 
 		@Override
 		public Set<ConvertiblePair> getConvertibleTypes() {
@@ -728,7 +771,8 @@ public class GenericConversionServiceTests {
 		}
 
 		@Override
-		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+		@Nullable
+		public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
 			return null;
 		}
 
@@ -736,6 +780,7 @@ public class GenericConversionServiceTests {
 			return sourceTypes;
 		}
 	}
+
 
 	private static class MyConditionalConverterFactory implements ConverterFactory<String, Color>, ConditionalConverter {
 
@@ -768,11 +813,13 @@ public class GenericConversionServiceTests {
 		String getBaseCode();
 	}
 
-	private static interface MyEnumInterface extends MyEnumBaseInterface {
+
+	private interface MyEnumInterface extends MyEnumBaseInterface {
 		String getCode();
 	}
 
-	private static enum MyEnum implements MyEnumInterface {
+
+	private enum MyEnum implements MyEnumInterface {
 
 		A("1"),
 		B("2"),
@@ -795,7 +842,8 @@ public class GenericConversionServiceTests {
 		}
 	}
 
-	private static enum EnumWithSubclass {
+
+	private enum EnumWithSubclass {
 
 		FIRST {
 			@Override
@@ -804,6 +852,7 @@ public class GenericConversionServiceTests {
 			}
 		}
 	}
+
 
 	@SuppressWarnings("rawtypes")
 	private static class MyStringToRawCollectionConverter implements Converter<String, Collection> {
@@ -814,6 +863,7 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class MyStringToGenericCollectionConverter implements Converter<String, Collection<?>> {
 
 		@Override
@@ -821,6 +871,7 @@ public class GenericConversionServiceTests {
 			return Collections.singleton(source + "X");
 		}
 	}
+
 
 	private static class MyEnumInterfaceToStringConverter<T extends MyEnumInterface> implements Converter<T, String> {
 
@@ -830,14 +881,16 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class StringToMyEnumInterfaceConverterFactory implements ConverterFactory<String, MyEnumInterface> {
 
-		@SuppressWarnings({ "unchecked", "rawtypes" })
+		@SuppressWarnings({"unchecked", "rawtypes"})
 		public <T extends MyEnumInterface> Converter<String, T> getConverter(Class<T> targetType) {
 			return new StringToMyEnumInterfaceConverter(targetType);
 		}
 
 		private static class StringToMyEnumInterfaceConverter<T extends Enum<?> & MyEnumInterface> implements Converter<String, T> {
+
 			private final Class<T> enumType;
 
 			public StringToMyEnumInterfaceConverter(Class<T> enumType) {
@@ -855,9 +908,10 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class StringToMyEnumBaseInterfaceConverterFactory implements ConverterFactory<String, MyEnumBaseInterface> {
 
-		@SuppressWarnings({ "unchecked", "rawtypes" })
+		@SuppressWarnings({"unchecked", "rawtypes"})
 		public <T extends MyEnumBaseInterface> Converter<String, T> getConverter(Class<T> targetType) {
 			return new StringToMyEnumBaseInterfaceConverter(targetType);
 		}
@@ -881,6 +935,7 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class MyStringToStringCollectionConverter implements Converter<String, Collection<String>> {
 
 		@Override
@@ -889,6 +944,7 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class MyStringToIntegerCollectionConverter implements Converter<String, Collection<Integer>> {
 
 		@Override
@@ -896,6 +952,7 @@ public class GenericConversionServiceTests {
 			return Collections.singleton(source.length());
 		}
 	}
+
 
 	@SuppressWarnings("rawtypes")
 	private static class UntypedConverter implements Converter {
@@ -906,28 +963,27 @@ public class GenericConversionServiceTests {
 		}
 	}
 
+
 	private static class ColorConverter implements Converter<String, Color> {
+
 		@Override
-		public Color convert(String source) { if (!source.startsWith("#")) source = "#" + source; return Color.decode(source); }
+		public Color convert(String source) {
+			return Color.decode(source.trim());
+		}
 	}
 
 
-	@ExampleAnnotation
-	public String annotatedString;
+	private static class MyConditionalColorConverter implements Converter<String, Color>, ConditionalConverter {
 
-	public List<Integer> list;
+		@Override
+		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
+			ExampleAnnotation ann = targetType.getAnnotation(ExampleAnnotation.class);
+			return (ann != null && ann.active());
+		}
 
-	public Map<String, Integer> map;
-
-	public Map<String, ?> wildcardMap;
-
-	@SuppressWarnings("rawtypes")
-	public Collection rawCollection;
-
-	public Collection<?> genericCollection;
-
-	public Collection<String> stringCollection;
-
-	public Collection<Integer> integerCollection;
-
+		@Override
+		public Color convert(String source) {
+			return Color.decode(source.substring(0, 6));
+		}
+	}
 }
